@@ -1,6 +1,11 @@
 2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * gdcmDicomDirElement.[h|cxx] : change the AddEntry method. Now, it gets a
+     type and not a string. So, there remove problems on the format of the
+     string.
+
+2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
    * src/gdcmDicomDirObject.h : set the FillObject method in protected.
-     Thus, DicomDirXXX are created with a flad that indicates if the created 
+     Thus, DicomDirXXX are created with a flad that indicates if the created
      object is empty or not (when not empty, the DicomDirElement is used to
      fill the object)
 
